[project]
name = "algos"
version = "0.1.0"
description = "A package containing algorithms and data structures implemented in Cython"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cython>=3.1.3",
    "numpy>=2.2.6",
    "setuptools>=80.9.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.10",
]

[tool.ruff]
# Set the maximum line length to 79.
line-length = 79
# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint]
ignore = [
    "B006",    # Learn Python yo!
    "C408",    # Unnecessary dict/list call
    "COM819",  # Trailing commas is da bomb
    "E731",    # Do not assign to lambda
    "ERA001", "T201", # comment code, prints are lax during development
    "G004",    # Logging format string should not use f-string
    "RET503",  # No explicit return None (all the other rules are about removing unnecessary things like this)
    "RUF012",  # Mutable class attributes should be annotated with typing.ClassVar
    "S311",    # Standard pseudo-random generators are not suitable for security/cryptographic purposes
    "SIM108",  # don't like ternary operator
    "SIM300",  # Yoda is wiser than you!
    "TRY003",  # Avoid long messages outside of exception class
    #"TRY004", # Use TypeError instead of ValueError
    "TRY301",  # Abstract raise garbage
]
select = [
    "A",     # flake8-builtins
    "ASYNC", # https://docs.astral.sh/ruff/rules/#flake8-async-async
    "B",     # flake8-bugbear
    "BLE",   # flake8-blind-except
    "C4",    # unnecessary comprehensions, map()
    "DTZ",   # flake8-datetimez
    "E",     # pycodestyle
    "ERA",   # No commented out code
    "EXE",   # flake8-executable
    "F",     # pyflakes
    "FLY",   # flynt
    "G",     # flake8-logging-format
    #"I",    # isort
    "ICN",   # https://github.com/joaopalmeiro/flake8-import-conventions
    "ISC",   # https://pypi.org/project/flake8-implicit-str-concat/
    "LOG",   # flake8-logging
    "PERF",  # perflint
    "PIE",   # https://pypi.org/project/flake8-pie/
    "PLC",   # Pylint conventions
    "PLE",   # Pylint error
    "PLW",   # Pylint warnings
    "PT",    # https://pypi.org/project/flake8-pytest-style/
    "PTH",   # flake8 use pathlib
    "RET",   # https://pypi.org/project/flake8-return/
    "RUF",   # Ruff rules
    "S",     # https://docs.astral.sh/ruff/rules/#flake8-bandit-s
    "SIM",   # https://pypi.org/project/flake8-simplify/
    "T",     # flake8-debugger
    "TRY",   # tryceratops
    "UP",    # pyupgrade
    "W",     # pycodestyle
    "ARG",   # flake8 unused arguments (not really helpful, unused func args are common and ok)
    #"D",    # pydocstyle (too much)
]

[tool.ruff.lint.per-file-ignores]
# Allow unused imports in __init__.py files.
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"